# character-battle-service

./: .gitignore  AGENTS.md  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml  sitecustomize.py
.githooks/: pre-commit
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: README.md  __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: battles.py  characters.py  health.py  leaderboard.py  session.py
backend/app/core/: config.py  errors.py  resources.py
backend/app/db/: base.py  session.py
backend/app/models/: anonymous_user.py  battle.py  character.py
backend/app/repositories/: anonymous_user_repository.py  battle_repository.py  character_repository.py
backend/app/schemas/: base.py  battle.py  character.py  leaderboard.py  session.py
backend/app/services/: battle_job_runner.py  battle_service.py  battle_status.py  character_service.py  leaderboard_service.py  llm_judge_service.py  prompt_payload.py  session_service.py
backend/tests/: README.md  test_battle_status.py  test_llm_judge_service.py
docs/: api_contract.md  architecture.md  backend_project_structure.md  backend_runtime.md  battle_rules.md  cicd_harness.md  engineering_rules.md  harness_automation.md  jenkins_architecture.md  kubernetes_deployment.md  product_brief.md  session_strategy.md  site_scope.md
evals/: sample_eval.jsonl
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
harness_starter/: __init__.py
infra/: README.md  docker-compose.app.yml  docker-compose.infra.yml
(+61 files in other folders)
